--- a/Заготовка Личная страница/index.html
+++ b/Заготовка Личная страница/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GONE.FLUDD</title>
-    <link rel="stylesheet" href="./fonts/main font.css">
-    <link rel="stylesheet" href="./styleindex.css">
-    <link rel="stylesheet" href="./styleind2.css">
+    <link rel="stylesheet" href="fonts/main_font.css">
+    <link rel="stylesheet" href="styleindex.css">
+    <link rel="stylesheet" href="styleind2.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
 
             <div class="row">
                 <div class="text-block">
-                    <p>Привет, это Гон. Тут мои треки, фото и цитаты. Чувствуй себя как дома, только тапки не спизди</p>
+                    <p>Привет, это Гон. Тут мои треки, фото и цитаты. Чувствуй себя как дома, только тапки не spzdi</p>
                 </div>
                 <div class="image-block">
                     <img src="images/gonflada.png" alt="ФЛАДДА">
