--- a/Заготовка Личная страница/memes.html
+++ b/Заготовка Личная страница/memes.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>МЕМЫ</title>
-    <link rel="stylesheet" href="./fonts/main font.css">
-    <link rel="stylesheet" href="./stylememes.css">
+    <link rel="stylesheet" href="fonts/main_font.css">
+    <link rel="stylesheet" href="stylememes.css">
 </head>
 <body>
     <div class="content">
