--- a/Заготовка Личная страница/quotes.html
+++ b/Заготовка Личная страница/quotes.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ЦИТАТЫ</title>
-    <link rel="stylesheet" href="./fonts/main font.css">
-    <link rel="stylesheet" href="./stylequotes.css">
+    <link rel="stylesheet" href="fonts/main_font.css">
+    <link rel="stylesheet" href="stylequotes.css">
 </head>
 <body>
     <div class="content">
@@ -15,8 +15,7 @@
                 <li>«Мамбл, мамбл, я сошел с ума? - Да просто таблетки от кашля были вкусные.»</li>
                 <li>«Кубик льда тает на губах — так я пытаюсь охладиться после жарких батлов.»</li>
                 <li>«Фиолетовый — это не цвет, это диагноз. И мне он нравится»</li>
-                <li>«Джойнт шипит — ни капли яда 
-   Логика: если шипит, значит, не ядовитый. Всё чётко.»</li>
+                <li>«Джойнт шипит — ни капли яда. Логика: если шипит, значит, не ядовитый. Всё чётко.»</li>
                 <li>«Надо возвращаться на свой район и жить как раньше, иначе можно душу свою проать»</li>
             </ul>
             
